changed whole delivery process, added confirm delivery button too